tambahkan project eggrade

--- a/index.html
+++ b/index.html
@@ -178,11 +178,11 @@
                                 <span>Project</span>
                             </a>
                         </li>
-                        <li class="tmenu">
+                        <!-- <li class="tmenu">
                             <a href="#blog" class="blog">
                                 <span>Blog</span>
                             </a>
-                        </li>
+                        </li> -->
                         <li class="tmenu">
                             <a href="#contact" class="contact">
                                 <span>Contact</span>
